# skull-back-rs

./: .dockerignore  Cargo.toml  Dockerfile  TESTING.md  build.sh  db.sqlite  flake.nix
api_test/: client.rs  helper.rs  in_memory.rs  main.rs  server.rs  tests.rs
cli/: .envrc  Cargo.toml
cli/src/: args.rs  constant.rs  handler.rs  main.rs  model.rs  request.rs  secret.rs
cli/src/cli/: dump.rs  list.rs  mod.rs  plot.rs  register.rs
delete_me/: bla
derive/: Cargo.toml
migrations/: 20220718121808_initial-setup.sql  20220721114208_last-modified.sql
server/: Cargo.toml
server/src/: args.rs  auth.rs  error.rs  logger.rs  main.rs  rejection.rs  root.rs  router.rs  runtime.rs
server/src/layer/: auth.rs  logger.rs  mod.rs
server/src/rest/: mod.rs  quick.rs  skull.rs
server/src/router/: mod.rs  ws.rs
server/src/router/rest/: mod.rs  occurrence.rs  quick.rs  skull.rs
server/src/service/: mod.rs  occurrence.rs  occurrences.rs  quick.rs  quicks.rs  skull.rs  skulls.rs
server/src/ws/: flow.rs  mod.rs  mode.rs  upgrade.rs
server/tests/api/: client.rs  helper.rs  main.rs  server.rs  test_utils.rs  tests.rs  utils.rs
skull/: Cargo.toml  build.rs
skull/.sqlx/: query-0c9d99f63d35fc97e61a617734a06cf1d0d9d657aad3fc6eb71bac5b8c265557.json  query-0f1072b2b9cbedc53a9039fb988d7a1e396703c67925c65601d1f186ace25418.json  query-11a81811f9a3ad574e8f605b4d0c2561220be47f87a786edebf31511b99d1416.json  query-1eb92ea9da0ca5411409c1f27d36c9ff700d0af266e79cfdb729db74d5b638ad.json  query-20e797d24587f683c21494d8af692820b85dd6f0b092636be9a49671630c99fc.json  query-3b6c41325f4a053bdb63c111752f85d0ad1ea52f38d3791b658fd3306734c99a.json  query-4bdac6769e02f341d67e4121f21096519dd4d72e386cae2b604a97109e714159.json  query-54476fbc3261339349a3bc0c91f717d44aca339fc82f754f2c6cf75964ece918.json  query-5b5a7aa09f5fbcbcb3f805c5247fa87a0e002c22f8cc05ecc284da71b32002f7.json  query-77e710b37ecee6a11aeae3eddedb764e9644597927602167a7acefabd8966f6f.json  query-79cde083ee29fa4b57c30879f34b3ceeba73de1fbeb76284e2b36f7e60b17951.json  query-7ad1741732aac075b8842850e8f9d4f836d83fbdcf283800bbd58db875138532.json  query-7d3047b37a7229dcdac9043f30cc5968cbe496a1e3ead00ab9e727fba5875c05.json  query-97207da519dbc17dc20cc9dde7cc96a9a0ab46c67decd448f5ddce430e6c401d.json  query-9b304e757101cadc9b70c51a7f8e77d11615e08403523a8f5c98d79b8fed4bb5.json  query-a61a32b965e753454bf21c725439c435db683a044b60b8d7624ae2ae2d7cc64b.json  query-b19ff0c1394b29e2ee16d454361f045b0567ea39c392853e05c8b70d6d0eebf5.json  query-f917b6256574f5d46e5285be16f7ce7c01a0711892ce0095623883139f3cd061.json  query-ff97d7c366629b425a02e23ff3e6c703576a3f438eb6568d7cb23b48eb596e91.json
skull/api_test/: client.rs  main.rs
skull/migrations/: 20220718121808_initial-setup.sql  20220721114208_last-modified.sql
skull/src/: options.rs
skull/src/server/: error.rs  mapper.rs  middleware.rs  mod.rs  route.rs
skull/src/server_axum/: mod.rs
skull/src/store/: data.rs  error.rs  in_db.rs  test.rs
skull/src/store/in_file/: serde.rs
store/: .env  Cargo.toml  db.sqlite  sqlx.sh
store/.sqlx/: query-05fcf69fa4ab9e733591dbd94e17b698ef6f6e21da2be3c57059b08470060218.json  query-06027f10d43bd153883598966ede3714c905341e2bfe1801e8c490a9e6ffaa97.json  query-0764272981e868ba7f15a6ae7a1b2b2359c84d57399d9031688c80884b1e7d8b.json  query-0f8544f9f76a353dbd82fb2257c84b5268197890443a0db79388aea94c13a603.json  query-104284e29407bd356f69235bafa21d352340d2e9d24ec2949f78902be09d290d.json  query-16300b2e531d954a6e2f561bcb747727dafcc84f3e963817e3e876fad36d7076.json  query-1fb152e760f2ceffe0d4739cbbd41d58864eb5f7f56cc40d0a88f8143cfbe242.json  query-22de905b2ab330fa3e7fd3ae0fb8b6e97b2c2a244a6276cda8806e9d07b32501.json  query-291f5b93ddcd1c0c857b184f4f5c1b569b3ff744725c6510974366cd94e8e61f.json  query-30754330915f46f1254bd57eb191547227150d8524105b25610a6ae5a2b07606.json  query-37b3dcdc24afd2ddae0e03b530f26ad602fac3afe9bb6efcd6592a8e32f26c1c.json  query-49c8596df65c1ae020ce6b395bc0daa01c0038360e40ad313cb71c9edc4dac36.json  query-4f0d7089d7480a97faef5e3c6d787cda730cf81ff6b9f953c43046978c3a9884.json  query-58347af1a81e32a6311173706209abd8a068ebc0b500a19ce2a00f29bffe909c.json  query-5a59ebb6dc7da10a640c2eff254bd2b359c528cd1039f78fbbc3abd33d12c5ee.json  query-67a19fe2ea86661770802465e4fc25eeef537a243e92b4e1d01615d46e007dec.json  query-734f64853abb9bb452ef34afdfc463b62e169eaf222bb827739c4267feb053ef.json  query-74b3fc4112aa691fcf9c1f80dbbdc2631e0c43ee6abce6fb627bcd2c97d925d6.json  query-8b21c35c4fd1b87b15190946af549f617f99c01e40289a2acb2f3b067e7309d2.json  query-91759eba43955ad0169292a42cd24acb0fefe0c64ed9ff6372a6f6cde8c95a32.json  query-a581b0887773c67f9d627da03c322ba1f6b6cf548e9ebac7cdfe46fac0ee4801.json  query-a59e476ad94fb98e0af5acbed10f82c06c7115f9eae5ec5a7d80defd47a6795b.json  query-b194625f337bb3feeeca5b9b6045d5338829b01ad14a981ebb00371879721244.json  query-bfee0bb3da3d65265dbe7cc16e0beddbb1a96121ab764ae02f83f49d6cde9eba.json  query-c26b0a2829f0b9ba9e7b87a38604a9ee78c54e6efddd792b8d595eaf4720de3f.json  query-c63aa75fe4b15a57c876b9b746426518113884bcaa584077ae19df9a088503e0.json  query-ca09be03267a62f10651abb897021090dcedb081dc127eef979759910a61ae4a.json  query-ce4ae6a9c18d6475617f56f25df91b8e483ebc7451748d4ca02c6a0b99948e0c.json  query-d06ac82f98476a745df3a396b8dc6a46476dd18b62ab42515d15b8e6695d4a30.json  query-d0c40f37e20a30467bfa068dce2bbea88901e1f5b23532b49accfb42a46a4208.json  query-d2b64c60b2a2a0fcc4a947feeb077d30fb68a5e3fa3eecd790f42bf304182dcc.json  query-df7fd875d912d574c742202af4bcb3cbb6e3318be99dac7ec7c6ea474dac77f0.json  query-e4b0f86ffc0bf5ac1eb684000c12d3755266d9c599fee4b2709d154331e32124.json  query-fb148264ce160913c11d86e96a3df6c7508545145f5044d1351eb843e3a1f971.json
store/migrations/: 20220718121808_initial-setup.sql  20260228150046_drop_quicks.sql
store/src/: error.rs  lib.rs
store/src/store/: mod.rs  occurrences.rs  quicks.rs  skulls.rs
types/: Cargo.toml
types/src/: error.rs  lib.rs  request.rs  response.rs  transparent.rs  ws.rs
types/src/tests/: error.rs  mod.rs  response.rs  ws.rs
types/src/tests/request/: mod.rs  occurrence.rs  quick.rs  skull.rs
(+93 files in other folders)
