[workspace]
members = ["migrator", "server", "store", "types"]
resolver = "2"

[workspace.package]
version = "0.10.1"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["query", "ws"] }
boile-rs = { version = "0.1.2", git = "https://github.com/m-lima/boile-rs", features = [
  "log-spans",
  "rt-shutdown",
] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
hyper = { version = "1.8.1", features = ["server"] }
itoa = "1.0.17"
pwner = "0.1.8"
rand = "0.10.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
reqwest = { version = "0.13.2", default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "registry",
] }

[workspace.metadata.crane]
name = "skull-back"
