[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "skull"
path = "src/main.rs"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
endgame = { workspace = true }
fuzzy-matcher = { workspace = true }
keyring = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls"] }
rpassword = { workspace = true }
rucline = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = { workspace = true }

types = { path = "../types", features = ["chrono", "query"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.2", features = [
  "linux-native-sync-persistent",
  "vendored",
] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.2", features = ["windows-native"] }
