[package]
name = "server"
version.workspace = true
edition.workspace = true
default-run = "server"

[features]
threads = ["boile-rs/rt-threads", "tokio/rt-multi-thread"]

[dependencies]
axum = { workspace = true }
boile-rs = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
store = { path = "../store" }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { path = "../types", features = ["query"] }

[dev-dependencies]
hyper = { workspace = true }
pwner = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[test]]
name = "api"
path = "./tests/api/main.rs"
harness = false
