[package]
name = "types"
version.workspace = true
edition.workspace = true

[features]
sqlx = ["dep:sqlx"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { workspace = true, optional = true }
serde = { workspace = true }
sqlx = { workspace = true, optional = true, features = ["sqlite"] }

[dev-dependencies]
rmp-serde = { workspace = true }
serde_json = { workspace = true }
