[package]
name = "types"
version.workspace = true
edition.workspace = true

[features]
chrono = ["dep:chrono"]
query = ["dep:itoa"]
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true, optional = true }
itoa = { workspace = true, optional = true }
serde = { workspace = true, fetaures = ["derive"] }
sqlx = { workspace = true, optional = true, features = ["sqlite"] }

[dev-dependencies]
rmp-serde = { workspace = true }
serde_json = { workspace = true }
