[package]
name = "types"
version.workspace = true
edition.workspace = true

[features]
chrono = ["dep:chrono"]
query = ["dep:itoa"]
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true, optional = true }
itoa = { workspace = true, optional = true }
serde = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
rmp-serde = { workspace = true }
serde_json = { workspace = true }
